001-multi-team-demo/app-team-1/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-team-1
  labels:
    name: app-team-1
    istio-injection: enabled
