001-multi-team-demo/app-team-1/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-team-1
  labels:
    name: app-team-1
    istio-injection: enabled
    #istio.io/rev: asm-managed-rapid
