001-multi-team-demo/app-team-1/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: up-and-running-app
  namespace: app-team-1
  labels:
    app: up-and-running-app
spec:
  selector:
    matchLabels:
      app: up-and-running-app
  replicas: 1
  template:
    metadata:
      labels:
        app: up-and-running-app
    spec:
      containers:
      - name: up-and-running-app
        image: europe-docker.pkg.dev/thiatt-manual-020/showcase-containers/001-up-and-running:test-v007
        ports:
        - containerPort: 8080
          protocol: TCP
