001-multi-team-demo/app-team-1/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: up-and-running-service
  namespace: app-team-1
  labels:
    app: up-and-running-app
spec: 
  selector: 
    app: up-and-running-app
  ports: 
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
