001-multi-team-demo/app-team-1/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: up-and-running-virtual-service
  namespace: app-team-1
spec:
  hosts:
  - "*"
  gateways:
  - asm-ingress/asm-ingressgateway
  http:
  - route:
    - destination:
        host: up-and-running-service
        port:
          number: 80
